<resources>
    <string name="app_name">Leveled1</string>
    <string name="main_greet">Hello Again!</string>
    <string name="greet_2">Welcome back you\'ve\n        been missed!</string>
    <string name="enter_username">Enter Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login_btn">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>